Update figures with max. 4 panel versions.

--- a/notebooks/06_figures_for_publication.ipynb
+++ b/notebooks/06_figures_for_publication.ipynb
@@ -32,6 +32,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%cd .."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
@@ -129,7 +138,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "phase_country_data = consolidated_counts_per_phase[\"country_ISO\"]"
+    "phase_country_data = consolidated_counts_per_phase[\"country_ISO\"]\n",
+    "overall_country_data = consolidated_counts_overall[\"country_ISO\"]"
    ]
   },
   {
@@ -140,6 +150,9 @@
    "source": [
     "phase_country_data_nonzero = phase_country_data[\n",
     "    phase_country_data[\"n_trials\"] > 0\n",
+    "].copy()\n",
+    "overall_country_data_nonzero = overall_country_data[\n",
+    "    overall_country_data[\"n_trials\"] > 0\n",
     "].copy()"
    ]
   },
@@ -151,6 +164,9 @@
    "source": [
     "phase_country_data_nonzero[\"log10_factor_deviation_n_sites_from_expected\"] = np.log10(\n",
     "    phase_country_data_nonzero[\"factor_deviation_n_sites_from_expected\"]\n",
+    ")\n",
+    "overall_country_data_nonzero[\"log10_factor_deviation_n_sites_from_expected\"] = np.log10(\n",
+    "    overall_country_data_nonzero[\"factor_deviation_n_sites_from_expected\"]\n",
     ")"
    ]
   },
@@ -201,7 +217,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "phase_country_data_nonzero = pd.merge(left=phase_country_data_nonzero, right=country_socioeconomic_data, on=\"country_ISO\", how=\"left\")"
+    "phase_country_data_nonzero = pd.merge(left=phase_country_data_nonzero, right=country_socioeconomic_data, on=\"country_ISO\", how=\"left\")\n",
+    "overall_country_data_nonzero = pd.merge(left=overall_country_data_nonzero, right=country_socioeconomic_data, on=\"country_ISO\", how=\"left\")"
    ]
   },
   {
@@ -334,7 +351,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "phase_country_data_nonzero = pd.merge(left=phase_country_data_nonzero, right=hdi_data[[\"country_ISO\", \"hdi\"]], on=\"country_ISO\", how=\"inner\")"
+    "phase_country_data_nonzero = pd.merge(left=phase_country_data_nonzero, right=hdi_data[[\"country_ISO\", \"hdi\"]], on=\"country_ISO\", how=\"inner\")\n",
+    "overall_country_data_nonzero = pd.merge(left=overall_country_data_nonzero, right=hdi_data[[\"country_ISO\", \"hdi\"]], on=\"country_ISO\", how=\"inner\")"
    ]
   },
   {
@@ -442,6 +460,149 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Figure 1.1 A - maps only"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(2, 2, figsize=((24, 10)))\n",
+    "\n",
+    "for i in range(4):\n",
+    "    g_world = visualization.plot_choropleth_map_country_level(\n",
+    "        trial_data=phase_country_data_nonzero[\n",
+    "            phase_country_data_nonzero[\"phase\"] == \"PHASE\" + str(i + 1)\n",
+    "        ],\n",
+    "        column_to_plot=\"factor_deviation_n_sites_from_expected\",\n",
+    "        log_scale=True,\n",
+    "        log_scale_diverging_palette=True,\n",
+    "        colormap_minimum_value=-2.5,\n",
+    "        colormap_maximum_value=1.5,\n",
+    "        show_colorbar=True,\n",
+    "        edgecolor=u\"black\",\n",
+    "        edges_linewidth=0.25,\n",
+    "        geometry_base_dataframe=geo_data,\n",
+    "        geometry_column_name=\"geometry\",\n",
+    "        country_id_column_name=\"country_ISO\",\n",
+    "        base_color=\"silver\",\n",
+    "        base_edgecolor=u\"white\",\n",
+    "        ax=axes[i // 2][i % 2],\n",
+    "    )\n",
+    "\n",
+    "    axes[i // 2][i % 2].set_title(\n",
+    "        \"ABCD\"[i]\n",
+    "        + \") \"\n",
+    "        + \"$\\mathregular{Log}_{10}$\"\n",
+    "        + \"-disproportionality of actual number of phase \"\n",
+    "        + str(i + 1)\n",
+    "        + \" trial sites vs. expected number of phase \"\n",
+    "        + str(i + 1)\n",
+    "        + \" trial sites based on population\"\n",
+    "    )\n",
+    "\n",
+    "plt.subplots_adjust(hspace=0.75)\n",
+    "fig.tight_layout()\n",
+    "save_path = \"figures/figure_1_alternative_1\"\n",
+    "plt.savefig(save_path + \".pdf\", format=\"pdf\", bbox_inches=\"tight\")\n",
+    "plt.savefig(save_path + \".svg\", format=\"svg\", bbox_inches=\"tight\")\n",
+    "plt.savefig(save_path + \".png\", format=\"png\", bbox_inches=\"tight\")\n",
+    "plt.savefig(\n",
+    "    save_path + \".tiff\",\n",
+    "    format=\"tiff\",\n",
+    "    dpi=600,\n",
+    "    pil_kwargs={\"compression\": \"tiff_lzw\"},\n",
+    "    bbox_inches=\"tight\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Figure 1.1 B - map and regression, all phases combined"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(1, 2, figsize=((24, 8)), width_ratios=[18, 6])\n",
+    "\n",
+    "g_world = visualization.plot_choropleth_map_country_level(\n",
+    "    trial_data=overall_country_data_nonzero,\n",
+    "    column_to_plot=\"factor_deviation_n_sites_from_expected\",\n",
+    "    log_scale=True,\n",
+    "    log_scale_diverging_palette=True,\n",
+    "    colormap_minimum_value=-2.5,\n",
+    "    colormap_maximum_value=1.5,\n",
+    "    show_colorbar=True,\n",
+    "    edgecolor=u\"black\",\n",
+    "    edges_linewidth=0.25,\n",
+    "    geometry_base_dataframe=geo_data,\n",
+    "    geometry_column_name=\"geometry\",\n",
+    "    country_id_column_name=\"country_ISO\",\n",
+    "    base_color=\"silver\",\n",
+    "    base_edgecolor=u\"white\",\n",
+    "    ax=axes[0],\n",
+    ")\n",
+    "\n",
+    "g_regression = visualization.linear_regression_and_scatter_plot(\n",
+    "    data=overall_country_data_nonzero,\n",
+    "    x_column=\"hdi\",\n",
+    "    y_column=\"log10_factor_deviation_n_sites_from_expected\",\n",
+    "    scatter_palette=continent_colors,\n",
+    "    scatter_hue_column=\"country_continent\",\n",
+    "    scatter_hue_order=continents,\n",
+    "    scatter_alpha=.75,\n",
+    "    #xlim=(0.55, 0.975),\n",
+    "    #ylim=(-2.75, 2.25),\n",
+    "    n_points=100,\n",
+    "    ax=axes[1],\n",
+    ")\n",
+    "\n",
+    "axes[1].legend(title=\"Continent\", loc=\"upper left\")\n",
+    "axes[1].set_xlabel(\"Human Development Index\")\n",
+    "axes[1].set_ylabel(\n",
+    "    \"$\\mathregular{Log}_{10}$\" + \"-disproportionality of trial sites\"\n",
+    ")\n",
+    "\n",
+    "axes[0].set_title(\n",
+    "    \"A) \"\n",
+    "    + \"$\\mathregular{Log}_{10}$\"\n",
+    "    + \"-disproportionality of actual number of trial sites vs. \"\n",
+    "    + \"expected number of phase sites based on population, \"\n",
+    "    + \"all phases combined\"\n",
+    ")\n",
+    "axes[1].set_title(\n",
+    "    \"B) \"\n",
+    "    + \"$\\mathregular{Log}_{10}$\"\n",
+    "    + \"-disproportionality of trial sites as function of \"\n",
+    "    + \"HDI, linear regression, all phases combined\"\n",
+    ")\n",
+    "\n",
+    "fig.tight_layout()\n",
+    "save_path = \"figures/figure_1_alternative_2\"\n",
+    "plt.savefig(save_path + \".pdf\", format=\"pdf\", bbox_inches=\"tight\")\n",
+    "plt.savefig(save_path + \".svg\", format=\"svg\", bbox_inches=\"tight\")\n",
+    "plt.savefig(save_path + \".png\", format=\"png\", bbox_inches=\"tight\")\n",
+    "plt.savefig(\n",
+    "    save_path + \".tiff\",\n",
+    "    format=\"tiff\",\n",
+    "    dpi=600,\n",
+    "    pil_kwargs={\"compression\": \"tiff_lzw\"},\n",
+    "    bbox_inches=\"tight\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Figure 2 - combined heatmaps\n",
     "To include:\n",
     "* Trials per continent, relative\n",
@@ -518,6 +679,107 @@
     "fig.tight_layout()\n",
     "\n",
     "save_path = \"figures/figure_2\"\n",
+    "plt.savefig(save_path + \".pdf\", format=\"pdf\", bbox_inches=\"tight\")\n",
+    "plt.savefig(save_path + \".svg\", format=\"svg\", bbox_inches=\"tight\")\n",
+    "plt.savefig(save_path + \".png\", format=\"png\", bbox_inches=\"tight\")\n",
+    "plt.savefig(\n",
+    "    save_path + \".tiff\",\n",
+    "    format=\"tiff\",\n",
+    "    dpi=600,\n",
+    "    pil_kwargs={\"compression\": \"tiff_lzw\"},\n",
+    "    bbox_inches=\"tight\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Figure 2.1 - regression instead of heatmap for HDI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(figsize=(14, 12))\n",
+    "\n",
+    "# The subpanels have different dimensions, so we have to\n",
+    "# play around with the grid specs and create custom axes.\n",
+    "ax_l1 = plt.subplot2grid((16, 2), (0, 0), rowspan=5)\n",
+    "ax_l2 = plt.subplot2grid((16, 2), (5, 0), rowspan=5)\n",
+    "ax_l3 = plt.subplot2grid((16, 2), (10, 0), rowspan=6)\n",
+    "ax_r1 = plt.subplot2grid((16, 2), (0, 1), rowspan=20)\n",
+    "axes = [ax_l1, ax_l2, ax_l3, ax_r1]\n",
+    "\n",
+    "\n",
+    "g_l1 = visualization.plot_heatmap_per_phase(\n",
+    "    trial_data=consolidated_counts_per_phase[\"country_continent\"],\n",
+    "    index_column_name=\"country_continent\",\n",
+    "    value_column_name=\"of_total_trials_phase\",\n",
+    "    annotation_format=\".2%\",\n",
+    "    phase_column_name=\"phase\",\n",
+    "    linear_palette=\"viridis\",\n",
+    "    cbar=False,\n",
+    "    ax=ax_l1,\n",
+    ")\n",
+    "ax_l1.set_title(\"A) Percentage of trials with at least one site on a given continent\")\n",
+    "\n",
+    "g_l2 = visualization.plot_heatmap_per_phase(\n",
+    "    trial_data=consolidated_counts_per_phase[\"country_continent\"],\n",
+    "    index_column_name=\"country_continent\",\n",
+    "    value_column_name=\"of_total_sites_phase\",\n",
+    "    annotation_format=\".2%\",\n",
+    "    phase_column_name=\"phase\",\n",
+    "    cbar=False,\n",
+    "    ax=ax_l2,\n",
+    ")\n",
+    "ax_l2.set_title(\"B) Distribution of trial sites over continents\")\n",
+    "\n",
+    "g_l3 = visualization.linear_regression_and_scatter_plot(\n",
+    "    data=overall_country_data_nonzero,\n",
+    "    x_column=\"hdi\",\n",
+    "    y_column=\"log10_factor_deviation_n_sites_from_expected\",\n",
+    "    scatter_palette=continent_colors,\n",
+    "    scatter_hue_column=\"country_continent\",\n",
+    "    scatter_hue_order=continents,\n",
+    "    scatter_alpha=.75,\n",
+    "    n_points=100,\n",
+    "    ax=ax_l3,\n",
+    ")\n",
+    "\n",
+    "ax_l3.legend(title=\"Continent\", loc=\"upper left\")\n",
+    "ax_l3.set_title(\n",
+    "    \"C) \"\n",
+    "    + \"$\\mathregular{Log}_{10}$\"\n",
+    "    + \"-disproportionality of trial sites as function of \"\n",
+    "    + \"HDI, all phases combined\"\n",
+    ")\n",
+    "\n",
+    "g_r1 = visualization.plot_heatmap_per_phase(\n",
+    "    trial_data=consolidated_counts_per_phase[\"subregion\"],\n",
+    "    index_column_name=\"subregion\",\n",
+    "    value_column_name=\"of_total_sites_phase\",\n",
+    "    annotation_format=\".2%\",\n",
+    "    phase_column_name=\"phase\",\n",
+    "    cbar=False,\n",
+    "    ax=ax_r1,\n",
+    ")\n",
+    "ax_r1.set_title(\"D) Distribution of trial sites over geographical regions\")\n",
+    "\n",
+    "for ax in axes:\n",
+    "    ax.set_xlabel(None)\n",
+    "    ax.set_ylabel(None)\n",
+    "ax_l3.set_xlabel(\"Human Development Index\")\n",
+    "ax_l3.set_ylabel(\n",
+    "    \"$\\mathregular{Log}_{10}$\" + \"-disproportionality of trial sites\"\n",
+    ")\n",
+    "\n",
+    "fig.tight_layout()\n",
+    "\n",
+    "save_path = \"figures/figure_2_alternative_1\"\n",
     "plt.savefig(save_path + \".pdf\", format=\"pdf\", bbox_inches=\"tight\")\n",
     "plt.savefig(save_path + \".svg\", format=\"svg\", bbox_inches=\"tight\")\n",
     "plt.savefig(save_path + \".png\", format=\"png\", bbox_inches=\"tight\")\n",
