--- a/notebooks/06_figures_for_publication.ipynb
+++ b/notebooks/06_figures_for_publication.ipynb
@@ -603,6 +603,93 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Figure 1.3 A - phase 3 and 4 maps only"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(2, 1, figsize=((12, 10)))\n",
+    "\n",
+    "\n",
+    "g_phase_3 = visualization.plot_choropleth_map_country_level(\n",
+    "    trial_data=phase_country_data_nonzero[\n",
+    "        phase_country_data_nonzero[\"phase\"] == \"PHASE3\"\n",
+    "    ],\n",
+    "    column_to_plot=\"factor_deviation_n_sites_from_expected\",\n",
+    "    log_scale=True,\n",
+    "    log_scale_diverging_palette=True,\n",
+    "    colormap_minimum_value=-2.5,\n",
+    "    colormap_maximum_value=1.5,\n",
+    "    show_colorbar=True,\n",
+    "    edgecolor=u\"black\",\n",
+    "    edges_linewidth=0.25,\n",
+    "    geometry_base_dataframe=geo_data,\n",
+    "    geometry_column_name=\"geometry\",\n",
+    "    country_id_column_name=\"country_ISO\",\n",
+    "    base_color=\"silver\",\n",
+    "    base_edgecolor=u\"white\",\n",
+    "    ax=axes[0],\n",
+    ")\n",
+    "\n",
+    "axes[0].set_title(\n",
+    "    \"A) \"\n",
+    "    + \"$\\mathregular{Log}_{10}$\"\n",
+    "    + \"-disproportionality of the actual number of phase 3\"\n",
+    "    + \" trial sites vs. the expected number of phase 3\"\n",
+    "    + \" trial sites based on population\"\n",
+    ")\n",
+    "\n",
+    "g_phase_4 = visualization.plot_choropleth_map_country_level(\n",
+    "    trial_data=phase_country_data_nonzero[\n",
+    "        phase_country_data_nonzero[\"phase\"] == \"PHASE4\"\n",
+    "    ],\n",
+    "    column_to_plot=\"factor_deviation_n_sites_from_expected\",\n",
+    "    log_scale=True,\n",
+    "    log_scale_diverging_palette=True,\n",
+    "    colormap_minimum_value=-2.5,\n",
+    "    colormap_maximum_value=1.5,\n",
+    "    show_colorbar=True,\n",
+    "    edgecolor=u\"black\",\n",
+    "    edges_linewidth=0.25,\n",
+    "    geometry_base_dataframe=geo_data,\n",
+    "    geometry_column_name=\"geometry\",\n",
+    "    country_id_column_name=\"country_ISO\",\n",
+    "    base_color=\"silver\",\n",
+    "    base_edgecolor=u\"white\",\n",
+    "    ax=axes[1],\n",
+    ")\n",
+    "\n",
+    "axes[1].set_title(\n",
+    "    \"B) \"\n",
+    "    + \"$\\mathregular{Log}_{10}$\"\n",
+    "    + \"-disproportionality of the actual number of phase 4\"\n",
+    "    + \" trial sites vs. the expected number of phase 4\"\n",
+    "    + \" trial sites based on population\"\n",
+    ")\n",
+    "\n",
+    "plt.subplots_adjust(hspace=0.75)\n",
+    "fig.tight_layout()\n",
+    "save_path = \"figures/untracked/figure_1_alternative_3\"\n",
+    "plt.savefig(save_path + \".pdf\", format=\"pdf\", bbox_inches=\"tight\")\n",
+    "plt.savefig(save_path + \".svg\", format=\"svg\", bbox_inches=\"tight\")\n",
+    "plt.savefig(save_path + \".png\", format=\"png\", bbox_inches=\"tight\")\n",
+    "plt.savefig(\n",
+    "    save_path + \".tiff\",\n",
+    "    format=\"tiff\",\n",
+    "    dpi=600,\n",
+    "    pil_kwargs={\"compression\": \"tiff_lzw\"},\n",
+    "    bbox_inches=\"tight\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Figure 2 - combined heatmaps\n",
     "To include:\n",
     "* Trials per continent, relative\n",
